--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -5,13 +5,14 @@ BIOST 578, HW1
 
 1. Use the GEOmetabd package to find all HCV gene expression data using the Illumina platform submitted by an investigator at Yale. This should be done with a single query, showing the title, the GSE accession number, the GPL accession number and the manufacturer and the description of the platform used.
 
-First we update and install the necessary packages for Bioconductor.
+**Answer**First we update and install the necessary packages for Bioconductor.
 ```{r, eval=TRUE, cache=TRUE}
 #This can take a long time to download/install
 source("http://bioconductor.org/biocLite.R")
 biocLite(c("GEOmetadb", "GEOquery"))
 library(GEOmetadb)
-
+```
+```{r, eval=FALSE}
 #This database download is particularly slow, so eval=FALSE for this code chunk
 getSQLiteFile()
 ```
@@ -21,9 +22,14 @@ geo_con = dbConnect(SQLite(),'GEOmetadb.sqlite')
 ```
 
 ```{r}
-#
-res1 = dbGetQuery(geo_con, "SELECT gpl.title, gpl.gpl, gpl.manufacturer, description FROM gpl WHERE gpl.manufacturer LIKE 'Illumina'")
+#Found pubmed_id on the GEO website
+#This query has Illumina and Affymetrix manufacturers
+res = dbGetQuery(geo_con, "SELECT gpl.title, gpl.gpl, gse.gse, gpl.manufacturer, gpl.description FROM (gse JOIN gse_gpl ON gse.gse = gse_gpl.gse) j JOIN gpl ON j.gpl=gpl.gpl WHERE gse.pubmed_id='23067362'")
 ```
 
 2. Reproduce your above query using the data.table package. Again, try to use a single line of code. [Hint: You first need to convert all db tables to data.table tables].
 
+```{r}
+library(data.table)
+
+```
