--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -1,35 +1,58 @@
 BIOST 578, HW1
 ========================================================
 
-**This is your first homework due Tuesday Feb 4.**
+**David Whitney's HW1**
 
-1. Use the GEOmetabd package to find all HCV gene expression data using the Illumina platform submitted by an investigator at Yale. This should be done with a single query, showing the title, the GSE accession number, the GPL accession number and the manufacturer and the description of the platform used.
+1. Use the GEOmetabd package to find all HCV gene expression data using the Illumina platform submitted by an investigator at Yale. This should be done with a single query, showing the title, the GSE accession number, the GPL accession number and the manufacturer and the description of the platform used. 
 
 **Answer**First we update and install the necessary packages for Bioconductor.
-```{r, eval=TRUE, cache=TRUE}
+```{r}
 #This can take a long time to download/install
 source("http://bioconductor.org/biocLite.R")
 biocLite(c("GEOmetadb", "GEOquery"))
 library(GEOmetadb)
 ```
+
+Now to get the 
 ```{r, eval=FALSE}
 #This database download is particularly slow, so eval=FALSE for this code chunk
 getSQLiteFile()
 ```
 
-```{r}
+```{r, eval=TRUE}
+# Make sure your current working directory contains GEOmetadb.sqlite
 geo_con = dbConnect(SQLite(),'GEOmetadb.sqlite')
 ```
 
 ```{r}
-#Found pubmed_id on the GEO website
-#This query has Illumina and Affymetrix manufacturers
-res = dbGetQuery(geo_con, "SELECT gpl.title, gpl.gpl, gse.gse, gpl.manufacturer, gpl.description FROM (gse JOIN gse_gpl ON gse.gse = gse_gpl.gse) j JOIN gpl ON j.gpl=gpl.gpl WHERE gse.pubmed_id='23067362'")
+# Join gse and gpl via the gse_gpl table
+res = dbGetQuery(geo_con, "SELECT gse.title, gse.gse, gpl.gpl, gpl.manufacturer, gpl.technology FROM (gse JOIN gse_gpl ON gse.gse = gse_gpl.gse) j JOIN gpl ON j.gpl=gpl.gpl WHERE gpl.manufacturer LIKE '%Illumina%' AND gse.contact LIKE '%Yale%' AND (gse.title LIKE '%HCV%' OR gse.title LIKE '%Hepatitis C%') ")
+res
 ```
 
 2. Reproduce your above query using the data.table package. Again, try to use a single line of code. [Hint: You first need to convert all db tables to data.table tables].
 
+**Answer**
+
 ```{r}
+# Working directory must contain the GEOmetadb.sqlite
 library(data.table)
 
+# Store each table for our query from the db in data.tables
+gse.dt = data.table(dbGetQuery(geo_con, "SELECT gse.title, gse.gse, gse.contact FROM gse"))
+gpl.dt = data.table(dbGetQuery(geo_con, "SELECT gpl.gpl, gpl.manufacturer, gpl.technology FROM gpl"))
+gse_gpl.dt = data.table(dbGetQuery(geo_con, "SELECT gse_gpl.gse, gse_gpl.gpl FROM gse_gpl"))
+
+# Set keys and then join the tables on gse
+setkey(gse.dt,gse)
+setkey(gse_gpl.dt,gse)
+gse_gse_gpl.dt = gse.dt[gse_gpl.dt]
+
+# Set keys and then join the new table and gpl table on gpl
+setkey(gpl.dt,gpl)
+setkey(gse_gse_gpl.dt,gpl)
+merge.gse.gpl.dt = merge(gse_gse_gpl.dt, gpl.dt, all=TRUE)
+
+# The final query for title, accession numbers, manufacturer, platform
+merge.gse.gpl.dt[(title %like% 'HCV' | title %like% 'Hepatitis C') & manufacturer %like% 'Illumina' & contact %like% 'Yale']
 ```
